Updated Canadian English translation.
2006-12-24  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -88,6 +88,7 @@ src/nautilus-side-pane.c
 src/nautilus-sidebar-title.c
 src/nautilus-spatial-window-ui.xml
 src/nautilus-spatial-window.c
+src/nautilus-trash-bar.c
 src/nautilus-throbber.c
 src/nautilus-window-bookmarks.c
 src/nautilus-window-manage-views.c
