Add support for XF86 multimedia keys (#329920) .
2007-01-11  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_key_press_event)
	* src/nautilus-actions.h:
	* src/nautilus-window.c:
	(nautilus_window_key_press_event)
	* configure.in: 
	Add support for XF86 multimedia keys (#329920) .

svn path=/trunk/; revision=12693

--- a/configure.in
+++ b/configure.in
@@ -365,6 +365,9 @@ AC_SUBST(CORE_IDL_INCLUDES)
 
 DISABLE_DEPRECATED_CFLAGS=""
 
+dnl Multimedia keys
+AC_CHECK_HEADERS([X11/XF86keysym.h])
+
 
 dnl Taken out for now
 dnl	-DGDK_DISABLE_DEPRECATED \
