--- a/nautilus-file-management-properties.desktop.in.in
+++ b/nautilus-file-management-properties.desktop.in.in
@@ -7,7 +7,7 @@ Icon=file-manager
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;Application;Settings;
+Categories=GNOME;Application;Settings;X-GNOME-PersonalSettings;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
