"Application" is not a valid category in the freedesktop.org
        * src/network-scheme.desktop.in:
        * nautilus-computer.desktop.in.in:
        * nautilus.desktop.in.in:
        * nautilus-home.desktop.in.in:
        * nautilus-file-management-properties.desktop.in.in:    
        "Application" is not a valid category in the freedesktop.org
        specification. Also added GNOME and/or GTK where appropriate.

svn path=/trunk/; revision=12793

--- a/nautilus-file-management-properties.desktop.in.in
+++ b/nautilus-file-management-properties.desktop.in.in
@@ -7,7 +7,7 @@ Icon=file-manager
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;Application;Settings;X-GNOME-PersonalSettings;
+Categories=GNOME;GTK;Settings;X-GNOME-PersonalSettings;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
