--- a/nautilus-home.desktop.in.in
+++ b/nautilus-home.desktop.in.in
@@ -8,7 +8,7 @@ Icon=gnome-fs-home
 Terminal=false
 StartupNotify=true
 Type=Application
-Categories=Application;Core;
+Categories=GNOME;GTK;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
