--- a/nautilus.desktop.in.in
+++ b/nautilus.desktop.in.in
@@ -8,7 +8,7 @@ Icon=file-manager
 Terminal=false
 StartupNotify=true
 Type=Application
-Categories=GNOME;Application;System;Utility;Core;
+Categories=GNOME;GTK;System;Utility;Core;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
