--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -8,5 +8,5 @@ Terminal=false
 StartupNotify=true
 Type=Application
 Icon=gnome-fs-network
-Categories=Application;Core;
+Categories=Core;
 OnlyShowIn=GNOME;
