--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -555,6 +555,20 @@ most cases, this should be left alone. -->Sans 10</default>
       </locale>
     </schema>
 
+    <schema>
+      <key>/schemas/apps/nautilus/icon_view/thumbnail_size</key>
+      <applyto>/apps/nautilus/icon_view/thumbnail_size</applyto>
+      <owner>nautilus</owner>
+      <type>int</type>
+      <default>96</default>
+      <locale name="C">
+         <short>Default Thumbnail Icon Size</short>
+         <long>
+             The default size of an icon for a thumbnail thumbnail in the icon view.
+         </long>
+      </locale>
+    </schema>    
+    
     <!-- List View -->
 
     <schema>
