Don't show in menu editor
2007-05-23  Alexander Larsson  <alexl@redhat.com>

        * nautilus-folder-handler.desktop.in.in:
	Don't show in menu editor


svn path=/trunk/; revision=12898

--- a/nautilus-folder-handler.desktop.in.in
+++ b/nautilus-folder-handler.desktop.in.in
@@ -4,6 +4,7 @@ _Name=Open Folder
 TryExec=nautilus 
 Exec=nautilus --no-desktop %U
 NoDisplay=true
+OnlyShowIn=;
 Terminal=false
 StartupNotify=true
 Type=Application
