Allow renaming of the network servers desktop icon. (#383182) Patch from
2007-06-17  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-desktop-link.c:
	(trash_name_changed), (nautilus_desktop_link_new),
	(trash_state_changed_callback), (nautilus_desktop_link_can_rename),
	(nautilus_desktop_link_rename), (desktop_link_finalize):
	* libnautilus-private/nautilus-global-preferences.c:
	(default_computer_link_name), (default_trash_link_name):
	* libnautilus-private/nautilus-global-preferences.h:
	Allow renaming of the network servers desktop icon. (#383182)
	Patch from Trevor Davenport  <trevor.davenport@gmail.com>

svn path=/trunk/; revision=12928

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -880,6 +880,20 @@ most cases, this should be left alone. -->Sans 10</default>
          </long>
       </locale>
     </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/desktop/network_icon_name</key>
+      <applyto>/apps/nautilus/desktop/network_icon_name</applyto>
+      <owner>nautilus</owner>
+      <type>string</type>
+      <locale name="C">
+         <short>Network servers icon name</short>
+         <long>
+          This name can be set if you want a custom name
+	  for the network servers icon on the desktop.
+         </long>
+      </locale>
+    </schema>
         
   </schemalist>  
 </gconfschemafile>
