--- a/configure.in
+++ b/configure.in
@@ -350,12 +350,12 @@ if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
 	AC_MSG_RESULT(yes)
 	WARNING_CFLAGS="\
 	-Wall \
-	-Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes \
+	-Wmissing-declarations -Wmissing-prototypes \
 	-Wnested-externs -Wpointer-arith \
-	-Wcast-align -Wsign-compare \
+	-Wcast-align \
 	-Werror"
 
-	for option in -Wno-strict-aliasing -Wno-sign-compare -Wno-pointer-sign; do
+	for option in -Wno-strict-aliasing -Wno-pointer-sign; do
 		SAVE_CFLAGS="$WARNING_CFLAGS"
 		WARNING_CFLAGS="$WARNING_CFLAGS $option"
 		AC_MSG_CHECKING([whether gcc understands $option])
