Add optional empty view.
2007-06-24  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	* src/nautilus-application.c:
	* src/file-manager/Makefile.am:
	* src/file-manager/fm-empty-view.[ch]:
	Add optional empty view.

svn path=/trunk/; revision=12956

--- a/configure.in
+++ b/configure.in
@@ -330,7 +330,15 @@ AC_CHECK_LIB(selinux, is_selinux_enabled,
    ])
 AC_SUBST(SELINUX_LIBS)
 
-	
+
+AC_ARG_ENABLE(empty_view,
+ AC_HELP_STRING([--enable-empty-view], [Enable empty view]),
+ [ENABLE_EMPTY_VIEW=1
+  AC_DEFINE(ENABLE_EMPTY_VIEW, 1, [define to enable the empty view that is used for performance measurement])])
+
+AC_SUBST(ENABLE_EMPTY_VIEW)
+AM_CONDITIONAL(ENABLE_EMPTY_VIEW, test "x$ENABLE_EMPTY_VIEW" = "x1")
+
 dnl ==========================================================================
 
 dnl Turn on the additional warnings last, so -Werror doesn't affect other tests.
