Fix build with libIDL-0.8.5 and older. (#341173) Patch from Marinus
2007-07-02  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-shell-interface.idl:
	Fix build with libIDL-0.8.5 and older. (#341173)
	Patch from Marinus Schraal  <foser@gentoo.org>

svn path=/branches/gnome-2-18/; revision=12974

--- a/configure.in
+++ b/configure.in
@@ -209,22 +209,22 @@ AC_SUBST(HAVE_JW)
 
 dnl ==========================================================================
 
-dnl exif checking
+AM_CONDITIONAL(HAVE_EXIF, false)
 
-AC_MSG_CHECKING(for libExif)
+dnl libexif checking
 
 PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
-    AC_DEFINE(HAVE_EXIF, 1, [Define to enable EXIF support])
-    AC_SUBST(EXIF_CFLAGS)
-    AC_SUBST(EXIF_LIBS)
-  ], [
-    PKG_CHECK_MODULES(EXIF, libexif = exif_minver, [
-      AC_DEFINE(HAVE_EXIF, 1)
-      AC_DEFINE(HAVE_OLD_EXIF, 1, [Define if your EXIF library has old API.])
-      AC_SUBST(EXIF_CFLAGS)
-      AC_SUBST(EXIF_LIBS)
-])])
+		  AM_CONDITIONAL(HAVE_EXIF, true)
+		  AC_DEFINE(HAVE_EXIF, 1, [Define to enable EXIF support])
+		  ], [
+		  PKG_CHECK_MODULES(EXIF, libexif = exif_minver, [
+				    AM_CONDITIONAL(HAVE_EXIF, true)
+				    AC_DEFINE(HAVE_OLD_EXIF, 1, [Define if your EXIF library has old API])
+				    ], [AM_CONDITIONAL(HAVE_EXIF, false)])
+		  ])
 
+AC_SUBST(EXIF_CFLAGS)
+AC_SUBST(EXIF_LIBS)
 
 dnl ==========================================================================
 dnl search implementations
