Add uninstalled pkg-config file. (#400114) Patch from Brian Cameron
2007-07-21  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
	Add uninstalled pkg-config file. (#400114)
	Patch from Brian Cameron  <brian.cameron@sun.com>

svn path=/trunk/; revision=13007

--- a/configure.in
+++ b/configure.in
@@ -463,6 +463,7 @@ libbackground/Makefile
 libnautilus-private/Makefile
 libnautilus-extension/Makefile
 libnautilus-extension/libnautilus-extension.pc
+libnautilus-extension/libnautilus-extension-uninstalled.pc
 nautilus.spec
 nautilus-computer.desktop.in
 nautilus-file-management-properties.desktop.in
