corrected description for confirm_trash (#329440)
2007-07-23  Andre Klapper  <a9016009@gmx.de>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	corrected description for confirm_trash (#329440)


svn path=/trunk/; revision=13014

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -75,10 +75,10 @@
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-         <short>Whether to ask for confirmation when moving files to trash</short>
+         <short>Whether to ask for confirmation when deleting files, or emptying Trash</short>
          <long>
            If set to true, then Nautilus will ask for confirmation when 
-           you attempt to put files in the trash.
+           you attempt to delete files, or empty the Trash.
          </long>
       </locale>
     </schema>
