fixed a typo in key description
2007-07-24  Luca Ferretti  <elle.uca@libero.it>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	fixed a typo in key description


svn path=/trunk/; revision=13017

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -564,7 +564,7 @@ most cases, this should be left alone. -->Sans 10</default>
       <locale name="C">
          <short>Default Thumbnail Icon Size</short>
          <long>
-             The default size of an icon for a thumbnail thumbnail in the icon view.
+             The default size of an icon for a thumbnail in the icon view.
          </long>
       </locale>
     </schema>    
