Replace references to "sidebar" with "side pane". (#131285) Patch from
2007-08-13  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* src/nautilus-navigation-window-menus.c:
	Replace references to "sidebar" with "side pane". (#131285)
	Patch from Reinout van Schouwen  <reinouts@gnome.org>

svn path=/trunk/; revision=13072

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -755,7 +755,7 @@ most cases, this should be left alone. -->Sans 10</default>
       <type>bool</type>
       <default>true</default>
       <locale name="C">
-         <short>Only show folders in the tree sidebar</short>
+         <short>Only show folders in the tree side pane</short>
          <long>
            If set to true, Nautilus will only show folders
            in the tree side pane. Otherwise it will show both folders
