--- a/nautilus-folder-handler.desktop.in.in
+++ b/nautilus-folder-handler.desktop.in.in
@@ -7,7 +7,7 @@ NoDisplay=true
 Terminal=false
 StartupNotify=true
 Type=Application
-MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory;application/x-gnome-saved-search
+MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory;application/x-gnome-saved-search;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
