libnautilus-private/apps_nautilus_preferences.schemas.in Added translator
2007-09-14  Alexander Shopov  <ash@contact.bg>

	* libnautilus-private/apps_nautilus_preferences.schemas.in
	Added translator visible comment for difference
	between date_changed and date_modified.

svn path=/trunk/; revision=13148

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -455,7 +455,8 @@ most cases, this should be left alone. -->Sans 10</default>
       <default>[none,size,date_modified]</default>
       <locale name="C">
          <short>List of possible captions on icons</short>
-         <long>
+         <long><!-- Translators: date_modified - mtime, the last time file contents were changed
+                                 date_changed  - ctime, the last time file meta-information changed -->
 	  A list of captions below an icon in the icon view and
           the desktop.  The actual number of captions shown depends on
           the zoom level.  Possible values are:
