add "sys/param.h" to AC_CHECK_HEADERS() to fix NetBSD build. Fixes bug
2007-11-27  Andre Klapper  <a9016009@gmx.de>

	* configure.in:
	add "sys/param.h" to AC_CHECK_HEADERS() to fix NetBSD build.
	Fixes bug #496266.


svn path=/trunk/; revision=13456

--- a/configure.in
+++ b/configure.in
@@ -150,7 +150,7 @@ AC_SUBST(ORBIT_IDL)
 
 dnl ==========================================================================
 
-AC_CHECK_HEADERS(sys/mount.h sys/vfs.h)
+AC_CHECK_HEADERS(sys/mount.h sys/vfs.h sys/param.h)
 			      
 dnl ==========================================================================
 
