--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -375,7 +375,7 @@ most cases, this should be left alone. -->Sans 10</default>
       <default>#ffffff</default>
       <locale name="C">
          <short>Default Background Color</short>
-         <long>Filename for the default folder background.  Only used if background_set is true.</long>
+         <long>Color for the default folder background.  Only used if background_set is true.</long>
       </locale>
     </schema>
     
