Fix a typo in libnautilus-private/apps_nautilus_preferences.schemas.in. Bug #506702, patch by Christian Kirbach.
svn path=/trunk/; revision=13555

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -265,7 +265,7 @@
       <type>bool</type>
       <default>false</default>
       <locale name="C">
-         <short>Show advanced permissions in in the file property dialog</short>
+         <short>Show advanced permissions in the file property dialog</short>
 	 <long>
 	  If set to true, then Nautilus lets you edit and display file
 	  permissions in a more unix-like way, accessing some more
