--- a/libnautilus-extension/libnautilus-extension.pc.in
+++ b/libnautilus-extension/libnautilus-extension.pc.in
@@ -7,6 +7,6 @@ extensiondir=@libdir@/nautilus/extensions-2.0
 Name: libnautilus-extension
 Description: A library to create Nautilus view extensions
 Version: @VERSION@
-Requires: glib-2.0 gtk+-2.0 gnome-vfs-2.0
+Requires: glib-2.0 gio-2.0 gtk+-2.0 
 Libs: -L${libdir} -lnautilus-extension
 Cflags: -I${includedir}/nautilus
