Add the removed connect to server files to skip instead
2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * POTFILES.skip:
	Add the removed connect to server files
	to skip instead


svn path=/trunk/; revision=13577

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -191,6 +191,8 @@ EXTRA_DIST =					\
 	check-nautilus				\
 	nautilus-shell-interface.idl		\
 	$(desktop_in_files)			\
+	nautilus-connect-server-dialog-main.c	\
+	nautilus-connect-server-dialog.c	\
 	$(NULL)
 
 BUILT_SOURCES = \
