--- a/configure.in
+++ b/configure.in
@@ -462,15 +462,20 @@ cut-n-paste-code/libegg/Makefile
 cut-n-paste-code/gsequence/Makefile
 cut-n-paste-code/widgets/Makefile
 data/Makefile
+data/icons/Makefile
+data/icons/16x16/Makefile
+data/icons/16x16/apps/Makefile
+data/icons/22x22/Makefile
+data/icons/22x22/apps/Makefile
+data/icons/24x24/Makefile
+data/icons/24x24/apps/Makefile
+data/icons/32x32/Makefile
+data/icons/32x32/apps/Makefile
+data/icons/scalable/Makefile
+data/icons/scalable/apps/Makefile
 data/patterns/Makefile
 docs/Makefile
 icons/Makefile
-icons/appicon/Makefile
-icons/appicon/16x16/Makefile
-icons/appicon/22x22/Makefile
-icons/appicon/24x24/Makefile
-icons/appicon/32x32/Makefile
-icons/appicon/scalable/Makefile
 libbackground/Makefile
 libnautilus-private/Makefile
 libnautilus-extension/Makefile
