--- a/libnautilus-private/Makefile.am
+++ b/libnautilus-private/Makefile.am
@@ -41,6 +41,8 @@ marshal_sources = \
 	$(NULL)
 
 libnautilus_private_la_SOURCES = \
+	nautilus-autorun.c \
+	nautilus-autorun.h \
 	nautilus-bookmark.c \
 	nautilus-bookmark.h \
 	nautilus-cell-renderer-pixbuf-emblem.c \
