--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,6 +7,7 @@ libnautilus-extension/nautilus-column.c
 libnautilus-extension/nautilus-menu-item.c
 libnautilus-extension/nautilus-property-page.c
 libnautilus-private/apps_nautilus_preferences.schemas.in
+libnautilus-private/nautilus-autorun.c
 libnautilus-private/nautilus-clipboard.c
 libnautilus-private/nautilus-column-chooser.c
 libnautilus-private/nautilus-column-utilities.c
